Add 'activated' email front-loaded onto sign in journeys

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -70,6 +70,14 @@
                                     {
                                         value: "l2-dashboard",
                                         text: "View as a L2 service admin"
+                                    },
+                                    {
+                                        value: "l3-dashboard",
+                                        text: "View as a L3 organisation admin"
+                                    },
+                                    {
+                                        value: "l4-dashboard",
+                                        text: "View as a L4 standard user"
                                     }
                                 ]
                             }) }}
@@ -99,7 +107,7 @@
                                 name: "prototype-firstname",
                                 classes: "govuk-!-width-one-half",
                                 hint: {
-                                    text: "Used on 'register' journey emails"
+                                    text: "Used on 'register' and 'sign in' journey emails"
                                 }
                             }) }}
 
@@ -111,7 +119,7 @@
                                 name: "prototype-lastname",
                                 classes: "govuk-!-width-one-half",
                                 hint: {
-                                    text: "Used on 'register' journey emails"
+                                    text: "Used on 'register' and 'sign in' journey emails"
                                 }
                             }) }}
                         </div>
