Copy generic sign in pages to L3 and L4 folders

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -139,28 +139,40 @@
 
             <ul class="govuk-list govuk-list--bullet">
                 <li>
+                    Front-loaded the sign in and register journeys with fake email for journey completeness
+                </li>
+
+                <li>
                     Complete re-organisation of view templates to allow for better URLs, etc
                 </li>
 
                 <li>
                     Start creating journeys for other level users
                 </li>
+
                 <li>
                     'Inactive' and 'Pending activation' changed to 'Access expired' and 'Invite sent'. Changes made as original terms not understood well by users
                 </li>
+
                 <li>
                     Removed 'back' link on user list pages with pagination
                 </li>
+
                 <li>
                     Make sure there's a view for the organisation choice of 'delete users by team' and 'delete users by service' - just needs content
                 </li>
-                <li>Added journey for new user registration with 2FA and Authenticator app backup option</li>
+
+                <li>
+                    Added journey for new user registration with 2FA and Authenticator app backup option
+                </li>
 
                 <li>Added journey for reset password</li>
 
                 <li>Added pages to view and add organisation contacts</li>
 
                 <li>Added page to edit organisation address</li>
+
+                <li>Added <a href="/v5/error/service" class="govuk-link">service error</a> page</li>
             </ul>
 
             <details class="govuk-details govuk-!-margin-top-9">
