Update authenticator app branch routes issue

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,7 +34,7 @@
                                 items: [
                                     {
                                         value: "HTDS",
-                                        text: "HDTS",
+                                        text: "HTDS",
                                         selected: true
                                     },
                                     {
