Change inactive to access expired

--- a/app/views/v5/l2/users/view/includes/sorting-filtering-org.html
+++ b/app/views/v5/l2/users/view/includes/sorting-filtering-org.html
@@ -22,7 +22,7 @@
                     },
                     {
                         value: "inactive",
-                        text: "Inactive"
+                        text: "Access expired"
                     },
                     {
                         value: "invite sent",
