--- a/app/views/v5/l2/users/view/includes/sorting-filtering.html
+++ b/app/views/v5/l2/users/view/includes/sorting-filtering.html
@@ -56,7 +56,7 @@
                     },
                     {
                         value: "inactive",
-                        text: "Inactive"
+                        text: "Access expired"
                     },
                     {
                         value: "invite sent",
