Added contact details for HDTS to reg confirm page

--- a/app/views/v5/l3/users/register/registration-complete.html
+++ b/app/views/v5/l3/users/register/registration-complete.html
@@ -45,6 +45,17 @@
         <p>Email:<br> 
         <a href="#">prap.support@dwp.gsi.gov.uk</a></p>
         {% endif %}
+
+        {% if data['prototype-service'] == 'HTDS' %}
+        
+        <p>HTDS Operational Support Team</p>
+        <p>Opening times: <br>
+        Monday to Friday: 9:00am to 4:00pm</p>
+        <p>Telephone:<br> 
+        0345 604 5406</p>
+        <p>Email:<br> 
+        <a href="#">htds.support@dwp.gsi.gov.uk</a></p>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
