Rename views in user register journey for shortness

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -40,6 +40,10 @@
                                     {
                                         value: "PRaP",
                                         text: "PRaP"
+                                    },
+                                    {
+                                        value: "ESF",
+                                        text: "ESF"
                                     }
                                 ]
                             }) }}
