--- a/app/views/v5/l2/users/reset-password/password-reset-confirmation.html
+++ b/app/views/v5/l2/users/reset-password/password-reset-confirmation.html
@@ -29,15 +29,8 @@
 
         <p>Use the new password when you sign in to DWP Authenticate.</p>
 
-        {% if data['prototype-service'] == 'PRaP' %}
-            <h2 class="govuk-heading-m govuk-!-margin-top-6">Accessing the PRaP service</h2>
-        {% endif %}
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Accessing the {{ data['prototype-service'] }} service</h2>
 
-
-        {% if data['prototype-service'] == 'HTDS' %}
-            <h2 class="govuk-heading-m govuk-!-margin-top-6">Accessing the HTDS service</h2>
-        {% endif %}
-        
         <p>You have already been authenticated, so you can continue to this service.</p>
 
         {{ govukButton({
