--- a/app/views/v5/l3/users/register/resend-code.html
+++ b/app/views/v5/l3/users/register/resend-code.html
@@ -25,11 +25,11 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">Send me a new code</h1>
             <p>We will send you a text message with a new code.</p>
-      
-                  
+
+
             {{ govukButton({
                 text: "Send new text message",
-                href: "code-in-message"
+                href: "code"
             }) }}
 
   </div>
