--- a/app/views/v5/l4/users/register/mobile.html
+++ b/app/views/v5/l4/users/register/mobile.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Create new password - {{serviceName}}
+    Mobile phone number - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -23,35 +23,21 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Create a new password</h1>
-            <p>Your password must be at least 8 characters long.</p>
+        <h1 class="govuk-heading-l">Enter your mobile phone number</h1>
+            <p>You cannot use a landline number. This is because landlines are often used be used by
+                many people, so they are not as secure as mobiles.</p>
 
-            <p>It must also contain:</p>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li>1 upper case letter</li>
-              <li>1 lower case letter</li>
-              <li>1 number</li>
-              <li>1 special character (e.g '!', '?' or '%')</li>
-            </ul>
 
             <div class="govuk-form-group govuk-!-margin-top-6">
                 <label class="govuk-label" for="width-20">
-                    Enter new password
+                    Mobile phone number
                 </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
-            </div>
-
-            <div class="govuk-form-group">
-                <label class="govuk-label" for="width-20">
-                    Confirm new password
-                </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="password">
+                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
             </div>
 
             {{ govukButton({
-                text: "Create password",
-                href: "enter-mobile.html"
+                text: "Send code",
+                href: "code.html"
             }) }}
   </div>
 {% endblock %}
