--- a/app/views/v5/l4/users/register/start.html
+++ b/app/views/v5/l4/users/register/start.html
@@ -28,7 +28,7 @@
 
       {{ govukButton({
         text: "Start registration",
-        href: "create-new-password.html",
+        href: "password.html",
         isStartButton: true
       }) }}
 
