--- a/app/views/v5/l2/users/reset-password/email.html
+++ b/app/views/v5/l2/users/reset-password/email.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Email sent - {{serviceName}}
+    Enter email address - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -21,25 +21,22 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">We have sent you an email with your code</h1>
-            <p>It should arrive in a few minutes.</p>
-            <p>We sent it to {{ data['reset-email-address'] }}.</p>
-      
-            <form action="code-in-message" method="post" class="form">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-l">Enter your email address</h1>
+
+            <form action="code" method="post" class="form">
                 <div class="govuk-form-group govuk-!-margin-top-6">
                     <label class="govuk-label" for="width-20">
-                        Code
+                        Email address
                     </label>
-                    <input class="govuk-input govuk-input--width-20" id="width-20" name="reset-code" type="text">
+                    <input class="govuk-input govuk-input--width-20" id="width-20" name="reset-email-address" type="text">
                 </div>
-                    
+
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Send code"
                 }) }}
             </form>
-
-            <p><a href="resend-email">I did not get the email</a></p>
-  </div>
+        </div>
+    </div>
 {% endblock %}
