--- a/app/views/v5/l2/users/reset-password/password.html
+++ b/app/views/v5/l2/users/reset-password/password.html
@@ -51,7 +51,7 @@
 
             {{ govukButton({
                 text: "Create new password",
-                href: "password-reset-confirmation.html"
+                href: "confirmation.html"
             }) }}
   </div>
 {% endblock %}
