--- a/app/views/v5/l2/users/reset-password/resend-email.html
+++ b/app/views/v5/l2/users/reset-password/resend-email.html
@@ -21,16 +21,16 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Send me another email</h1>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-l">Send me another email</h1>
+
             <p>The email will contain a new code.</p>
 
-      
             {{ govukButton({
                 text: "Send new email",
-                href: "enter-email-code.html"
+                href: "code.html"
             }) }}
-
-  </div>
+        </div>
+    </div>
 {% endblock %}
