--- a/app/views/v5/l2/users/reset-password/start.html
+++ b/app/views/v5/l2/users/reset-password/start.html
@@ -30,7 +30,7 @@
                 <li>Your email address</li>
                 <li>The mobile phone linked to your DWP Authenticate account</li>
             </ul>
-      
+
             <h2 class="govuk-heading-s">What will happen:</h2>
             <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
                 <li>Enter the email address you normally use to sign in.</li>
@@ -41,12 +41,11 @@
                 <li>You’ll be signed in to DWP Authenticate.</li>
             </ol>
 
-    
-                  
             {{ govukButton({
                 text: "Start password reset",
-                href: "enter-email.html",
+                href: "email.html",
                 isStartButton: true
             }) }}
-  </div>
+        </div>
+    </div>
 {% endblock %}
