--- a/app/views/v5/l2/users/reset-password/resend-code.html
+++ b/app/views/v5/l2/users/reset-password/resend-code.html
@@ -21,15 +21,16 @@
 {% endblock %}
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Send me another code</h1>
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+            <h1 class="govuk-heading-l">Send me another code</h1>
+
             <p>We will send you a text message with a new code.</p>
-      
+
             {{ govukButton({
                 text: "Send new code",
-                href: "code-in-message.html"
+                href: "code.html"
             }) }}
-
-  </div>
+        </div>
+    </div>
 {% endblock %}
