Make view names more obvious re: text or email codes

--- a/app/views/v5/l2/users/reset-password/resend-email.html
+++ b/app/views/v5/l2/users/reset-password/resend-email.html
@@ -29,7 +29,7 @@
 
             {{ govukButton({
                 text: "Send new email",
-                href: "code.html"
+                href: "email-code.html"
             }) }}
         </div>
     </div>
