--- a/app/views/v5/l2/users/reset-password/email-code.html
+++ b/app/views/v5/l2/users/reset-password/email-code.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-    Code in message - {{serviceName}}
+    Email sent - {{serviceName}}
 {% endblock %}
 
 {% block header %}
@@ -23,28 +23,24 @@
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-l">We have sent you a text message with your code</h1>
+            <h1 class="govuk-heading-l">We have sent you an email with your code</h1>
             <p>It should arrive in a few minutes.</p>
-            <p>We sent it to a number ending 1234.</p>
+            <p>We sent it to {{ data['reset-email-address'] }}.</p>
 
-            {{ govukDetails({
-                summaryText: "This phone number is wrong",
-                text: "Contact your organisation. They can help."
-            }) }}
-
-            <div class="govuk-form-group govuk-!-margin-top-6">
-                <label class="govuk-label" for="width-20">
+            <form action="text-code" method="post" class="form">
+                <div class="govuk-form-group govuk-!-margin-top-6">
+                    <label class="govuk-label" for="width-20">
                         Code
-                </label>
-                <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
-            </div>
+                    </label>
+                    <input class="govuk-input govuk-input--width-20" id="width-20" name="reset-code" type="text">
+                </div>
 
-            {{ govukButton({
-                text: "Continue to password creation",
-                href: "password.html"
-            }) }}
+                {{ govukButton({
+                    text: "Continue"
+                }) }}
+            </form>
 
-            <p><a href="resend-code">I did not receive a code</a></p>
+            <p><a href="resend-email">I did not get the email</a></p>
         </div>
     </div>
 {% endblock %}
