--- a/app/views/v5/l2/users/reset-password/email.html
+++ b/app/views/v5/l2/users/reset-password/email.html
@@ -25,7 +25,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Enter your email address</h1>
 
-            <form action="code" method="post" class="form">
+            <form action="email-code" method="post" class="form">
                 <div class="govuk-form-group govuk-!-margin-top-6">
                     <label class="govuk-label" for="width-20">
                         Email address
