--- a/app/views/v5/l3/email.html
+++ b/app/views/v5/l3/email.html
@@ -101,6 +101,8 @@
                                 https://htds-signin-url.gov.uk{{ queryString }}
                             {% elseif data['prototype-service'] == "PRaP" %}
                                 https://prap-signin-url.gov.uk{{ queryString }}
+                            {% elseif data['prototype-service'] == "ESF" %}
+                                https://esf-signin-url.gov.uk{{ queryString }}
                             {% endif %}
                         </a>
                     </p>
@@ -120,7 +122,7 @@
                     </h2>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        If you have any problems signing in, contact {% if data['prototype-service'] == "HTDS" %}the HTDS Support Team{% elseif data['prototype-service'] == "PRaP" %}the PRaP Operational Support Team{% endif %}.
+                        If you have any problems signing in, contact {% if data['prototype-service'] == "HTDS" %}the HTDS Support Team{% elseif data['prototype-service'] == "PRaP" %}the PRaP Operational Support Team{% elseif data['prototype-service'] == "ESF" %}the ESF Operational Support Team{% endif %}.
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
@@ -129,6 +131,8 @@
                             <a href="mailto:htds.support@dwp.gsi.gov.uk" class="govuk-link">htds.support@dwp.gsi.gov.uk</a>
                         {% elseif data['prototype-service'] == "PRaP" %}
                             <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">prap.support@dwp.gsi.gov.uk</a>
+                        {% elseif data['prototype-service'] == "ESF" %}
+                            <a href="mailto:prap.support@dwp.gsi.gov.uk" class="govuk-link">esf.support@dwp.gsi.gov.uk</a>
                         {% endif %}
                     </p>
 
@@ -139,6 +143,8 @@
                                 0345 000000
                             {% elseif data['prototype-service'] == "PRaP" %}
                                 0345 604 5406
+                            {% elseif data['prototype-service'] == "ESF" %}
+                                0345 111111
                             {% endif %}
                         </strong>
                     </p>
@@ -157,7 +163,7 @@
                     </p>
 
                     <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-                        {% if data['prototype-service'] == "HTDS" %}HTDS Support Team{% elseif data['prototype-service'] == "PRaP" %}PRaP Operational Support Team{% endif %}
+                        {% if data['prototype-service'] == "HTDS" %}HTDS Support Team{% elseif data['prototype-service'] == "PRaP" %}PRaP Operational Support Team{% elseif data['prototype-service'] == "ESF" %}ESF Operational Support Team{% endif %}
                     </p>
                 </td>
 
